chore: set debug to false

--- a/terran_builds.yml
+++ b/terran_builds.yml
@@ -11,10 +11,10 @@ BuildChoices:
     test_123:
         BotName: Test
         Cycle:
-#            - MassMine
+            - MassMine
 #            - Reapers
 #            - BattleCruiserRush
-            - ThorDrop
+#            - ThorDrop
 
     Protoss:
         BotName: ProtossRace
